--- a/targets/android/templates/AndroidManifest.xml
+++ b/targets/android/templates/AndroidManifest.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
 	package="${APP_PACKAGE}"
+	
 	android:versionCode="1"
 	android:versionName="1.0">
+	
 	<uses-sdk 
 		android:minSdkVersion="3"
 		android:targetSdkVersion="7" />
+		
+	<uses-feature android:glEsVersion="0x00010001" />
+		
 	<application android:label="${APP_LABEL}" android:icon="@drawable/icon">
 		<activity 
 			android:name="MonkeyGame" 
