--- a/targets/android/templates/AndroidManifest.xml
+++ b/targets/android/templates/AndroidManifest.xml
@@ -4,7 +4,8 @@
 	package="${APP_PACKAGE}"
 	
 	android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="1.0"
+	android:installLocation="auto">
 	
 	<uses-sdk 
 		android:minSdkVersion="3"
