--- a/targets/android/templates/AndroidManifest.xml
+++ b/targets/android/templates/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-	package="${APP_PACKAGE}"
+	package="${ANDROID_APP_PACKAGE}"
 	
 	android:versionCode="1"
 	android:versionName="1.0"
@@ -13,11 +13,11 @@
 		
 	<uses-feature android:glEsVersion="0x00010001" />
 		
-	<application android:label="${APP_LABEL}" android:icon="@drawable/icon">
+	<application android:label="${ANDROID_APP_LABEL}" android:icon="@drawable/icon">
 		<activity 
 			android:name="MonkeyGame" 
-			android:label="${APP_LABEL}"
-			android:screenOrientation="${SCREEN_ORIENTATION}"
+			android:label="${ANDROID_APP_LABEL}"
+			android:screenOrientation="${ANDROID_SCREEN_ORIENTATION}"
 			android:configChanges="keyboardHidden|orientation"
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 			<intent-filter>
