--- a/targets/android/templates/res/layout/main.xml
+++ b/targets/android/templates/res/layout/main.xml
@@ -4,7 +4,7 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical" >
 
-	<view class="${APP_PACKAGE}.MonkeyGame$MonkeyView"
+	<view class="${ANDROID_APP_PACKAGE}.MonkeyGame$MonkeyView"
     	android:id="@+id/monkeyview"
 		android:keepScreenOn="true"
   		android:layout_width="fill_parent"
