--- a/targets/android/templates/AndroidManifest.xml
+++ b/targets/android/templates/AndroidManifest.xml
@@ -12,6 +12,8 @@
 		android:targetSdkVersion="7" />
 		
 	<uses-feature android:glEsVersion="0x00010001" />
+	
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 		
 	<application android:label="${ANDROID_APP_LABEL}" android:icon="@drawable/icon">
 		<activity 
