--- a/targets/android/templates/AndroidManifest.xml
+++ b/targets/android/templates/AndroidManifest.xml
@@ -14,6 +14,8 @@
 	<uses-feature android:glEsVersion="0x00010001" />
 	
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 		
 	<application android:label="${ANDROID_APP_LABEL}" android:icon="@drawable/icon">
 		<activity 
